# mexc_spread

./: .gitignore  ALL_TASKS_1_5_COMPLETED.md  ALL_TASKS_COMPLETED.md  CLOCK_SKEW_INTEGRATION.md  DNS_IMPLEMENTATION_COMPLETE.md  DNS_IMPLEMENTATION_FINAL.md  README.md  RECONCILIATION_INTEGRATION.md  TASKS_4_5_COMPLETED.md  TASKS_4_5_COMPLETED_FULL.md  TASKS_4_5_SUMMARY.md  app.py  fix-dydx-loading.patch  gui-perf-improvements.patch  improvement-plan.md  mexc_spread_sprint1.patch  package-lock.json  package.json  perf-optimizations.patch  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.bat  run_modern.bat  ws-feeds-sse.patch
backend/: __init__.py  main.py
config/: external_apis.json  futures_arb.json  network_dns_config.json
docs/: ARCHITECTURE.md  BUSINESS.md  TRADING.md  ZAPUSK.md
examples/: tasks_4_5_examples.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
mexc_monitor/: __init__.py  backtest.py  client.py  clock_skew.py  clock_skew_middleware.py  config.py  cross_market.py  cross_spread_store.py  execution.py  execution_model.py  filters.py  freshness.py  futures_l1_qty.py  futures_rows.py  history_store.py  history_worker.py  http_shared.py  http_utils.py  klines.py  metrics.py  models.py  order_executor.py  orderbook.py  pipeline.py  portfolio_risk.py  reconciliation.py  spread_buffer.py  spread_capture.py  state_store.py  symbol_filter.py  vwap.py  ws_bookticker.py  ws_futures.py  ws_futures_orderbook.py  ws_spot_orderbook.py
scripts/: setup_dns.py  (+1 more)
(+203 files in other folders)
